# Serpentine3D

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml  pages.yml
.tokensave/: config.json  tokensave.db  tokensave.db-shm  tokensave.db-wal
docs/: coming-from-rhino.md  commands.md  drafting.md  gen_commands.py  index.md  install.md  mcp.md  scripting.md  tutorial.md
docs/explanation/: how-it-works.md
docs/getstarted/: first-model.md  install.md
docs/howto/: 3d-printing.md  ai-mcp.md  drawings.md  scripting.md
docs/reference/: commands.md  file-formats.md  keyboard.md
examples/: hero_scene.py
overrides/: main.html
packaging/: install-desktop.sh
packaging/appimage/: build-appimage.sh  serpentine.desktop  serpentine3d.desktop
packaging/macos/: build-dmg.sh  serp3d.spec  serp3d_entry.py
packaging/windows/: build-installer.ps1  installer.iss  serp3d.spec  serp3d_entry.py
serpentine/: __init__.py  api.py  app.py  batch.py  plugins.py  rpc.py  scripting.py
serpentine/commands/: __init__.py  base.py  camera_cmds.py  curves.py  drafting.py  edit.py  file.py  organize.py  select.py  solids.py  solids_edit.py  surfaces.py  transform.py  view.py
serpentine/core/: cplane.py  deform.py  geometry.py  history.py  hlr.py  layers.py  layout.py  mesh.py  occ.py  scene.py  selection.py  snaps.py  tessellate.py  text.py
serpentine/fileio/: __init__.py  gltf.py  native.py  obj.py  pdf.py  rhino.py  usd.py
serpentine/mcp_server/: server.py
serpentine/ui/: annot_paint.py  camera.py  command_line.py  console.py  gumball.py  help_browser.py  icons.py  layers_panel.py  layout_view.py  properties.py  settings_dialog.py  theme.py  viewport.py
serpentine/utils/: autosave.py  config.py  math3d.py  units.py
serpentine3d/: __init__.py  __main__.py  api.py  app.py  batch.py  launcher.py  plugins.py  rpc.py  scripting.py
serpentine3d/ai/: __init__.py  agent.py  client.py  panel.py  tools.py
serpentine3d/commands/: base.py  boolean.py  curves.py  (+12 more)
tests/: conftest.py  e2e_dod.py  rpc_client.py  run_e2e.sh  test_ai.py  test_autosave.py  test_commands.py  test_commands_gaps.py  test_config_snaps.py  test_drafting.py  test_draworder.py  test_fbx.py  test_fileio.py  test_geometry.py  test_geometry_gaps.py  test_gumball.py  test_gumball_subobject.py  test_linetype.py  test_ortho_views.py  test_performance.py  test_printcheck.py  test_robustness.py  test_scene.py  test_scripting.py  test_spacemouse.py  test_stl.py  test_threemf.py  test_units.py  test_updates.py  test_viewports.py
website/: hero.webm  index.html
(+52 files in other folders)
