[project]
name = "serpentine3d"
version = "0.2.0"
description = "Open-source NURBS surface modeller for Linux with MCP integration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chisomo Banzi" }]
requires-python = ">=3.10"
dependencies = [
    "cadquery-ocp>=7.9",
    "PySide6>=6.6",
    "numpy>=1.26",
    "PyOpenGL>=3.1",
    "mcp>=1.0",
    "rhino3dm>=8.0",
    "ezdxf>=1.1",
    "svgelements>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.urls]
Homepage = "https://github.com/chisomobanzi/Serpentine3D"

[project.scripts]
serp3d = "serpentine3d.app:main"
serp = "serpentine3d.app:main"          # short alias, like `code` for VS Code
serp3d-mcp = "serpentine3d.mcp_server.server:main"
serp3d-batch = "serpentine3d.batch:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["serpentine3d*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
